Support pasting values into calculator

BUG: 441292
FIXED-IN: 5.1.3

(cherry picked from commit 1719720b2e860aa433812cf4ac77f314035bc840)